# ocaml-state-machine

./: .gitignore  melange-opam-template.opam  package-lock.json  package.json
docs/: TECH_SPEC.md
src/: Hello.ml  ReactApp.re  dune
src/domain/: Actor.re  ActorId.re  ActorType.re  Auth.re  AuthActor.re  Mail.re  State.re  StateAction.re  Task.re  dune
src/sm-impl/: CommandHandler_RegisterActor.re  CommandProcessor.re  Services.re  StateProcessor.re  dune
src/sm-impl/types/: Command.re  Event.re  StateMutation.re  Transform.re
src/state-machine/: Command.re  Event.re  Mutate.re  State.re  StateMachine2.re  StateMutation.re  dune
src/state-machine/interfaces/: CommandProcessor.re  Dependencies.re
